bk_ida/gccida/g2/global_alloc
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:945:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v159; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1000:4: error: expected ';' after expression
rtx v214; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1000:5: error: use of undeclared identifier 'v214'
rtx v214; // [rsp+10h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1033:13: error: use of undeclared identifier 'eliminables_2'
v5 = 1LL << eliminables_2[v4].from; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1035:22: error: subscripted value is not an array, pointer, or vector
if ( *(int *)0x670844[2 * v4] == 7 ) 
             ~~~~~~~~^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1079:12: error: expected expression
*( _OWORD *)v14 = -1LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1079:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v14 = -1LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1080:14: error: expected expression
*( ( _OWORD *)v14 + 1) = -1LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1080:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v14 + 1) = -1LL; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1081:14: error: expected expression
*( ( _OWORD *)v14 + 2) = -1LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1081:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v14 + 2) = -1LL; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1082:14: error: expected expression
*( ( _OWORD *)v14 + 3) = -1LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1082:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v14 + 3) = -1LL; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1083:14: error: expected expression
*( ( _OWORD *)v14 + 4) = -1LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1083:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v14 + 4) = -1LL; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1084:14: error: expected expression
*( ( _OWORD *)v14 + 5) = -1LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1084:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v14 + 5) = -1LL; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1085:14: error: expected expression
*( ( _OWORD *)v14 + 6) = -1LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/global.c:1085:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v14 + 6) = -1LL; 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/global_alloc/src/obj/global.o] Error 1
